# seedling

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: generation.yaml  instruction_schema.yaml  models.yaml  roles.yaml
src/: __init__.py  app.py  domains.py  exporter.py  generator.py  hardware.py  roles.py
tests/: __init__.py  conftest.py  test_app.py  test_domains.py  test_exporter.py  test_generator.py  test_roles.py
